--- a/Project_4/package.json
+++ b/Project_4/package.json
@@ -16,6 +16,6 @@
    "express": "^4.16.4",
    "express-prettify": "^0.1.1",
    "hex2ascii": "0.0.3",
-   "level": "^4.0.0",
+   "level": "^4.0.0"
  }
 }
